fix: align logo to the left

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,6 @@ p.page-404 {
   }
 
   header {
-    text-align: center;
+    text-align: left;
   }
 }
